# AutomaticAssertionGenerator

./: CMakeLists.txt  README.md  config.json  pipeline_s1s2.cpp  pipeline_s1s2.py
run_GA_72/: _probe_isolation.sv  assertions_compiled_clean.sv  assertions_raw_llm.sv  dut_with_asserts.sv  final_fmsv_spec.sv  information_bank.json  stage4_history.json  stage4_results.json  stage5_focus_nstate_filtered.sv  stage5_focus_nstate_prompt.txt  stage5_focus_nstate_raw.sv  stage5_last_user_prompt.txt  stage5_llm_raw_r1.sv  stage5_llm_raw_r2.sv  stage5_llm_raw_r3.sv  stage5_llm_raw_r4.sv  stage5_refinement.json  stage5_vault_passes.sv  stage6_report.md  stage6_results.json  temp.sby
run_GA_72/failed_traces/: a_d_o_func_r2_trace.vcd  a_d_o_func_r2_trace_tb.v  a_d_o_func_r3_trace.vcd  a_d_o_func_r3_trace_tb.v  a_d_o_func_trace.vcd  a_d_o_func_trace_tb.v  a_d_o_low_trace.vcd  a_d_o_low_trace_tb.v  a_d_o_reg_clear_trace.vcd  a_d_o_reg_clear_trace_tb.v  a_d_o_reg_func_trace.vcd  a_d_o_reg_func_trace_tb.v  a_d_o_reg_high_trace.vcd  a_d_o_reg_high_trace_tb.v  a_d_o_reg_low_trace.vcd  a_d_o_reg_low_trace_tb.v  a_d_o_reg_rel_trace.vcd  a_d_o_reg_rel_trace_tb.v  a_d_o_reg_reset_2_trace.vcd  a_d_o_reg_reset_2_trace_tb.v  a_d_o_reg_reset_r3_trace.vcd  a_d_o_reg_reset_r3_trace_tb.v  a_d_o_reg_reset_trace.vcd  a_d_o_reg_reset_trace_tb.v  a_d_o_reg_set_trace.vcd  a_d_o_reg_set_trace_tb.v  a_d_o_reg_stay_1_trace.vcd  a_d_o_reg_stay_1_trace_tb.v  a_d_o_reg_tracks_2_trace.vcd  (+410 more)
run_GA_75/: assertions_raw_llm.sv  dut_with_asserts.sv  dut_with_asserts_bisect.sv  information_bank.json
(+43 files in other folders)
